# ILoSA

./: .gitignore  CMakeLists.txt  ILoSA.py  LICENSE  README.md  data_prep.py  fixed the desplaying of the gif  gaussian_process.py  kernel.py  main.py  package.xml  panda.py  setup.py  test.py  test_quaternion.py  utils.py
ILoSA/: ILoSA.py  __init__.py  data_prep.py  gaussian_process.py  panda.py  requirements.txt  user_interfaces.py
data/: data.npz  last.npz
example/: Gaussian Process Dynamical System .ipynb  load_data.py  utilities.py
example/DataSet/: Angle.mat  BendedLine.mat  CShape.mat  DoubleBendedLine.mat  GShape.mat  JShape.mat  JShape_2.mat  Khamesh.mat  LShape.mat  Leaf_1.mat  Leaf_2.mat  Line.mat  Multi_Models_1.mat  Multi_Models_2.mat  Multi_Models_3.mat  Multi_Models_4.mat  NShape.mat  PShape.mat  RShape.mat  Saeghe.mat  Sharpc.mat  Sine.mat  Snake.mat  Spoon.mat  Sshape.mat  Trapezoid.mat  WShape.mat  Worm.mat  Zshape.mat  heee.mat
models/: delta.pkl  stiffness.pkl
